...
                    )
                },
                modifier=Modifier.fillMaxSize()
            )
        }

        Box(videoGestures.then(Modifier.testTag("player-video-gestures")))

        if(loading || buffering) {
            PlayerBufferingOverlay(
                title=if(loading)"در حال آماده‌سازی پخش امن..." else "در حال بافر..."
            )
        }
...
